...
import com.example.harmonyhub.R
import com.example.harmonyhub.ui.components.Artist
import com.example.harmonyhub.ui.components.Song

object SongRepository{
    var allSongs = listOf(
        Song(id = "3ztP5O7dJSha2PG429eUCb", name = "Thiên Lý Ơi", artist = "Jack - J97",
            imageResId = "https://i.scdn.co/image/ab67616d00001e0233a31cc1175e787bfea17a65",
            url = "https://p.scdn.co/mp3-preview/8ede412058d9e95de0b4b3a735fe3c999498336c?cid=d8a5ed958d274c2e8ee717e6a4b0971d"),
        Song(id = "7gSQxwCpEMjg8wb6Y3oqe7", name = "HÀO QUANG", artist = "ANH TRAI SAY HI",
            imageResId = "https://i.scdn.co/image/ab67616d00001e02901ea2601f4f8262474a75a1",
            url = "https://p.scdn.co/mp3-preview/05a875c428a96e884053a5bb500394e8503f8c18?cid=d8a5ed958d274c2e8ee717e6a4b0971d"),
        Song(id = "7jLSThU5Kg1RWt19Leiaxm", name = "Chìm Sâu", artist = "RPT MCK, Trung Trần",
...
